fix: scrollbar

--- a/src/assets/css/sass/common/_index.scss
+++ b/src/assets/css/sass/common/_index.scss
@@ -34,14 +34,15 @@ a:hover {
   margin-top: 10px;
 }
 
-*::-webkit-scrollbar {
-  width: 8px;
-  background-color: #181c3a;
+.nft-scrollbar::-webkit-scrollbar {
+  width: 4px;
+  height: 6px;
+  background-color: transparent;
 }
 
-*::-webkit-scrollbar-thumb {
+.nft-scrollbar::-webkit-scrollbar-thumb {
   border-radius: 6px;
-  background: #f44336;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .gray {
